Fri Dec 06 23:01:08 GMT 2002  Olly Betts <olly@survex.com>

	* common/omdebug.cc,common/omdebug.h: Fixed permissions on newly
	  created log file (was getting 000!); Simplified class internals;
	  Renamed env vars: OM_DEBUG_FILE is now XAPIAN_DEBUG_LOG,
	  OM_DEBUG_TYPES is now XAPIAN_DEBUG_FLAGS (old versions still work
	  for now).

Fri Dec 06 22:58:57 GMT 2002  Olly Betts <olly@survex.com>

	* testsuite/testsuite.cc: Fixed so running "gdb .libs/apitest"
	  finds srcdir (for an in-tree build at least).

Fri Dec 06 03:51:35 GMT 2002  Olly Betts <olly@survex.com>

	* common/,include/om/omenquire.h,matcher/localmatch.h,matcher/rset.cc,
	  matcher/stats.cc: Fixed to compile with GCC 3.0.

Thu Dec 05 23:28:29 GMT 2002  Olly Betts <olly@survex.com>

	* include/om/omdatabase.h: Added missing "std::".

Thu Dec 05 23:27:57 GMT 2002  Olly Betts <olly@survex.com>

	* docs/remote.html: Updated from OmSettings to factory functions.

Thu Dec 05 23:26:42 GMT 2002  Olly Betts <olly@survex.com>

	* PLATFORMS: ixion is actually Linux 2.2.

Thu Dec 05 04:32:40 GMT 2002  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.cc: Fixed BackendManager::do_getdb_quartz()
	  and do_getwritedb_quartz() to work correctly and so resolved some
	  test failures.

Wed Dec 04 03:35:12 GMT 2002  Olly Betts <olly@survex.com>

	* api/omdatabaseinternal.cc,backends/quartz/,docs/todo.xml,
	  include/om/omdatabase.h: Replace create and allow_overwrite
	  boolean flags with OM_DB_XXX constants.  And we now support
	  OM_DB_CREATE_OR_OPEN which is a common action to want to
	  perform, but was fiddly to achieve before.

Tue Dec 03 23:59:30 GMT 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: Updated.

Tue Dec 03 23:26:27 GMT 2002  Olly Betts <olly@survex.com>

	* api/omenquire.cc,backends/quartz/quartz_postlist.h,common/,
	  docs/omsettings,docs/todo.xml,include/om/omenquire.h,matcher/,
	  net/socketcommon.cc,net/socketserver.cc,tests/api_db.cc,