@@ -26,7 +26,6 @@
 #include "om/omerror.h"
 
 #include <errno.h>
-#include <fcntl.h>
 #include <netdb.h>
 #include <netinet/in.h>
 #include <string.h>
